# Tanuki

./: .dockerignore  .env.local.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.minimal.yml  docker-compose.yml  install.bat  install.sh  jest.selenium.config.js  launcher.bat  next.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.json  update.bat  update.sh
docker/: ai-backend.Dockerfile  nginx.conf  uwsgi.ini
docker/ai_backend/: app.py
public/: manifest.json  sw.js
public/icons/: README.md
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/binaries/: README.md
src-tauri/icons/: README.md
src-tauri/src/: device_identity.rs  lib.rs  llm_sidecar.rs  main.rs  sync_engine.rs  system_info.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/api/admin/analytics/: route.ts
src/app/api/admin/config/: route.ts
src/app/api/admin/students/: route.ts
src/app/api/stories/: route.ts
src/app/login/: page.tsx
src/app/student/: page.tsx
src/app/teacher/: page.tsx
src/components/: DeviceInfo.tsx  LocalModelManager.tsx  NetworkStatus.tsx  OnboardingModal.tsx  OrbBackground.tsx  StoryCard.tsx  ThemeSelector.tsx  ThemeWrapper.tsx
src/lib/: auth.ts  client-auth.ts  knowledge-base.ts  local-model.ts  openai.ts  reading-levels.ts  safety.ts  storage.ts  web-search.ts
src/lib/tauri/: bridge.ts  index.ts  offline-store.ts
tests/selenium/: admin.test.ts  globalSetup.ts  globalTeardown.ts  helpers.ts  login.test.ts  student.test.ts
(+18 files in other folders)
